--- a/index.html
+++ b/index.html
@@ -5,4 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Min første nettside</title>
     </head>
+    <body>
+        <h1>Velkommen til min første nettside!</h1>
+    </body>
 </html>
