--- a/index.html
+++ b/index.html
@@ -6,20 +6,36 @@
         <title>Min første nettside</title>
     </head>
     <body>
-        <h1>Velkommen til min første nettside!</h1>
-        <p> 
-        Lorenm ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </p>
-        <p>
-        Ut enim ad minim veniam, quis nostrud exercitation 
-        ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-        </p>
-        <p>
-        Duis aute irure dolor in reprehenderit in voluptate velit esse 
-        cillum dolore eu fugiat nulla pariatur. 
-        Excepteur sint occaecat cupidatat non proident, 
-        sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <!--Kommentar på et eller annet./*-->
+        <main>
+            <h1>Velkommen til min første nettside!</h1>
+
+            <p>Lorenm ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+            <article>
+                <h2>Webutvikling</h2>
+
+                <p>Ut enim ad minim veniam, quis nostrud exercitation 
+                ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, 
+                sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </article>
+            
+            <article>
+                <h2>Innføring i programmering</h2>
+
+                <p>Ut enim ad minim veniam, quis nostrud exercitation 
+                ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse 
+                cillum dolore eu fugiat nulla pariatur. 
+                Excepteur sint occaecat cupidatat non proident, 
+                sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </article>
+        </main>
     </body>
 </html>
