--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="style.css">
         <title>Min første nettside</title>
     </head>
     <body>
@@ -24,7 +25,7 @@
                 Excepteur sint occaecat cupidatat non proident, 
                 sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </article>
-            
+
             <article>
                 <h2>Innføring i programmering</h2>
 
