--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="no">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,33 +9,44 @@
     <body>
         <!--Kommentar på et eller annet./*-->
         <main>
-            <h1>Velkommen til min første nettside!</h1>
-
-            <p>Lorenm ipsum dolor sit amet, consectetur adipiscing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-
             <article>
-                <h2>Webutvikling</h2>
+            <h1>PANNEKAKER</h1>
 
-                <p>Ut enim ad minim veniam, quis nostrud exercitation 
-                ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Oppskriften gir verdens beste pannekaker, så pass på å lage nok pannekakerøre.</p>
 
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse 
-                cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, 
-                sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </article>
 
-            <article>
-                <h2>Innføring i programmering</h2>
+            <h2>SLIK GJØR DU</h2>
+                <ol>
+                    <li>Bland mel og salt. Tilsett halvparten av melken. 
+                        Visp sammen til en tykk og klumpfri røre. 
+                        Tilsett resten av melken. Visp inn egg. 
+                        La pannekakerøren svelle i ca. ½ time.</li>
+                        
+                    <li>Smelt margarin i en god og varm stekepanne.
+                        Hell i en øse med pannekakerøre og vend på pannen, 
+                        slik at røren legger seg i et jevnt lag. 
+                        Snu pannekaken når den har stivnet på oversiden og 
+                        blitt gyllenbrun på undersiden.</li>
+                    
+                    <li>Når pannekaken er stekt på begge sider, 
+                        brettes den sammen og legges i et ildfast fat med lokk. 
+                        Pannekakene holder da varmen, 
+                        slik at alle kan spise sammen.</li>
 
-                <p>Ut enim ad minim veniam, quis nostrud exercitation 
-                ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </ol>
 
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse 
-                cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, 
-                sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Server gjerne pannekakene sammen med ertesuppe til middag 
+                    eller som en selvstendig middag, 
+                    med blåbærsyltetøy eller sukker på. </p>
+
+
+                <p>Pannekakene kan serveres til middag med jordbærsyltetøy, 
+                blåbærsyltetøy, stekt flesk eller en stuing. 
+                Like godt smaker det med varme pannekaker med sukker, 
+                is eller flamberte pannekaker til dessert. 
+                Pannekaker i en stabel med krem og bær imellom blir en spennende kake 
+                litt utenom det vanlige.</p>
+
             </article>
         </main>
     </body>
